# bs-budget-tracker-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 48ac351fabda_.py  fe3d159bb700_add_calculated_sum_fields_to_budget_.py
app/: main.py
app/api/v1/: api.py  deps.py
app/api/v1/endpoints/: budgets.py  categories.py  transactions.py
app/core/: config.py  security.py
app/crud/: __init__.py  crud_budget.py  crud_category.py  crud_chat.py  crud_transaction.py  crud_user.py
app/db/: base_class.py  database.py
app/db/models/: __init__.py  budget.py  category.py  chat.py  transaction.py  user.py
app/schemas/: __init__.py  budget.py  category.py  chat.py  transaction.py  user.py
